[tool.poetry]
name = "AquaBot"
version = "2.8.0"
description = "a qq bot based on nonebot2. "
authors = ["bakashigure"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0.a16"
nb-cli = "^0.4.2"
openai = "^0.27.0"


[tool.poetry.dev-dependencies]
nonebot-test = "^0.1.0"

[nonebot.plugins]
plugins = []
plugin_dirs = ["aquabot/plugins"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
